--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Zeichensatz und mobile Optimierung -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seiten swipen</title>
+  <title>Basbergschule Hameln</title>
 
   <style>
   
